Add unified navigation menu to all ADE interfaces
- Created shared navigation component with active page highlighting
- Added navigation bar to all 5 interfaces (Chat, Builder, VFS, Visualizer, Cost Calculator)
- Navigation includes ADE logo that links back to homepage
- Mobile responsive with icon-only view on small screens
- Shows connection status indicator
- Consistent styling across all pages with fixed top nav

--- a/api-cost-calculator.html
+++ b/api-cost-calculator.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADE Claude API Cost Calculator</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.js"></script>
+    <script src="/nav-component.js"></script>
     <style>
         * {
             margin: 0;
@@ -421,6 +422,9 @@
                 }
             }
         }).mount('#app');
+        
+        // Add navigation
+        createADENav('cost');
     </script>
 </body>
 </html>
