--- a/apml-visualizer.html
+++ b/apml-visualizer.html
@@ -6,6 +6,7 @@
     <title>APML Visualizer</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/vis-network@9.1.2/dist/vis-network.min.js"></script>
+    <script src="/nav-component.js"></script>
     <style>
         :root {
             --bg-primary: #0a0a0f;
@@ -641,6 +642,9 @@
                 };
             }
         }).mount('#app');
+        
+        // Add navigation
+        createADENav('visualizer');
     </script>
 </body>
 </html>
