--- a/l1-orch-interface.html
+++ b/l1-orch-interface.html
@@ -6,6 +6,7 @@
     <title>ADE - Build Your App</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="/nav-component.js"></script>
     <style>
         :root {
             --bg-primary: #0a0a0f;
@@ -932,6 +933,9 @@
                 };
             }
         }).mount('#app');
+        
+        // Add navigation
+        createADENav('chat');
     </script>
 </body>
 </html>
