--- a/vfs-enhanced-dashboard.html
+++ b/vfs-enhanced-dashboard.html
@@ -6,6 +6,7 @@
     <title>ADE Multi-Agent Hub - VFS Enhanced</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/monaco-editor@0.45.0/min/vs/loader.js"></script>
+    <script src="/nav-component.js"></script>
     <style>
         :root {
             --bg-primary: #0a0a0f;
@@ -891,6 +892,9 @@
                 };
             }
         }).mount('#app');
+        
+        // Add navigation
+        createADENav('dashboard');
     </script>
 </body>
 </html>
