--- a/ade-builder-interface.html
+++ b/ade-builder-interface.html
@@ -6,6 +6,7 @@
     <title>ADE Builder - Visual App Development</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+    <script src="/nav-component.js"></script>
     <style>
         * {
             margin: 0;
@@ -542,6 +543,9 @@
                 mermaid.initialize({ theme: 'dark' });
             }
         }).mount('#app');
+        
+        // Add navigation
+        createADENav('builder');
     </script>
 </body>
 </html>
