Create proper APML App Flow Visualizer
- APML Visualizer now shows APP STRUCTURE, not agent communication
- Displays screens, navigation flows, components, and data models
- Interactive network diagram with flow and hierarchy views
- Left panel shows app structure overview
- Center shows visual flow diagram
- Right panel shows selected screen details
- Replaced old agent communication visualizer
- Updated homepage description to reflect actual purpose

--- a/index-home.html
+++ b/index-home.html
@@ -146,8 +146,8 @@
                     <div class="tool-icon">🔗</div>
                     <h2 class="tool-title">APML Visualizer</h2>
                     <p class="tool-description">
-                        Interactive visualization of agent coordination. 
-                        See how agents communicate and collaborate through the APML protocol.
+                        Visualize your app's structure and flow. See screens, navigation paths, 
+                        components, and data models in an interactive diagram.
                     </p>
                 </a>
                 
