--- a/index-home.html
+++ b/index-home.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADE - APML Development Engine</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.js"></script>
+    <link rel="stylesheet" href="/ade-design-system.css">
+    <script src="/ade-nav.js"></script>
     <style>
         * {
             margin: 0;
