--- a/index-home.html
+++ b/index-home.html
@@ -221,6 +221,8 @@
                 }
             }
         }).mount('#app');
+        
+        // DO NOT create old navigation - we're using ade-nav.js
     </script>
 </body>
 </html>
