Rewrite Nav System

--- a/ade-builder-interface.html
+++ b/ade-builder-interface.html
@@ -6,7 +6,8 @@
     <title>ADE Builder - Visual App Development</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
-    <script src="/nav-component.js"></script>
+    <link rel="stylesheet" href="/ade-design-system.css">
+    <script src="/ade-nav.js"></script>
     <script src="/apml-to-live-preview.js"></script>
     <style>
         * {
@@ -624,8 +625,6 @@
             }
         }).mount('#app');
         
-        // Add navigation
-        createADENav('builder');
     </script>
 </body>
 </html>
