--- a/l1-orch-interface.html
+++ b/l1-orch-interface.html
@@ -6,7 +6,8 @@
     <title>ADE - Build Your App</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="/nav-component.js"></script>
+    <link rel="stylesheet" href="/ade-design-system.css">
+    <script src="/ade-nav.js"></script>
     <style>
         :root {
             --bg-primary: #0a0a0f;
@@ -934,8 +935,6 @@
             }
         }).mount('#app');
         
-        // Add navigation
-        createADENav('chat');
     </script>
 </body>
 </html>
