--- a/api-cost-calculator.html
+++ b/api-cost-calculator.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADE Claude API Cost Calculator</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.js"></script>
-    <script src="/nav-component.js"></script>
+    <link rel="stylesheet" href="/ade-design-system.css">
+    <script src="/ade-nav.js"></script>
     <style>
         * {
             margin: 0;
@@ -423,8 +424,6 @@
             }
         }).mount('#app');
         
-        // Add navigation
-        createADENav('cost');
     </script>
 </body>
 </html>
